--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# Application Data
+config.yml
+backups
